completely fixed signin button on mobile and screen.

--- a/public/styles.css
+++ b/public/styles.css
@@ -44,7 +44,7 @@
     display: inline-block;
     background: white;
     color: #444;
-    width: 190px;
+    /* width: 190px; */
     border-radius: 5px;
     border: thin solid #888;
     box-shadow: 1px 1px 1px grey;
@@ -58,17 +58,17 @@ span.label {
     font-weight: normal;
 }
 span.icon {
-    background: url('public/google_signin.png') transparent 5px 50% no-repeat;
+    background: url('google_signin.png') transparent no-repeat;
     display: inline-block;
     vertical-align: middle;
-    width: 42px;
-    height: 42px;
+    width: 32px;
+    height: 32px;
 }
 span.buttonText {
     display: inline-block;
     vertical-align: middle;
-    /*padding-left: 42px;*/
-    /*padding-right: 42px;*/
+    /*padding-left: 42px;
+    padding-right: 42px;*/
     font-size: 14px;
     font-weight: bold;
     /* Use the Roboto font that is loaded in the <head> */
